move overview, route changes, etc

--- a/www/views/kill-list.pug
+++ b/www/views/kill-list.pug
@@ -1,5 +1,6 @@
 div.killmails
 	each val in json
-		- var url = '/cache/1hour/site/killmail/row/' + val.killmail_id + '.html';
+		- var url = '/site/killmail/row/' + val.killmail_id + '.html';
 		- var divid = 'kill-' + val.killmail_id
 		div(fetch=url unfetched="true" id=divid)
+br
