--- a/www/views/mixins.pug
+++ b/www/views/mixins.pug
@@ -13,18 +13,20 @@ mixin type_id_link(tag, type, id, name)
 		-var url = '/' + type + '/' + id
 		-var name = (name == null || name == undefined || name == '' ? type + ' ' + id : name)
 		#{tag}
-			a(href=url alt=name)= name
+			a(href=url alt=name class='override')= name
 
 mixin tag_image(tag, url, src, name, size)
 	#{tag}
+		-var onerror = 'this.onerror = null; this.src="https://images.evetech.net/alliances/1/logo?size=' + size + '"';
 		-var imageHolder = 'width: ' + size + 'px; height: ' + size + 'px;'
-		a(href=url)
-			img.image(src=src alt=name style=imageHolder)
+		a(href=url class='override')
+			img.image(src=src alt=name style=imageHolder onerror=onerror)
 
 mixin type_image(tag, id, name, size)
 	if id != undefined
+		-var category = (size <= 64 ? 'icon' : 'render')
 		-var url = '/type/' + id
-		-var image = 'https://images.evetech.net/types/' + id + '/icon?size=' + size
+		-var image = 'https://images.evetech.net/types/' + id + '/' + category + '?size=' + size
 		-var name = (name == null || name == undefined || name == '' ? type + ' ' + id : name)
 		+tag_image(tag, url, image, name, size)
 
