--- a/www/views/index.pug
+++ b/www/views/index.pug
@@ -10,7 +10,7 @@ html
 
 	body
 		div.wrapper.container-fluid
-			nav.navbar.navbar-expand-lg
+			nav#toptoptop.navbar.navbar-expand-lg
 				a.navbar-brand.override(href='/') zKillboard
 				ul.navbar-nav.mr-auto
 				form.form-inline.my-2.my-lg-0
@@ -45,11 +45,11 @@ script
 	| var start_time = Date.now()
 //-script(defer src='https://cdn.jsdelivr.net/npm/vanilla-lazyload@12.0.0/dist/lazyload.min.js')
 
-script(async src='/js/jquery-3.4.1.min.js')
+script(defer src='/js/jquery-3.4.1.min.js')
 
-script(async src='/js/popper-1.14.7.min.js')
+script(defer src='/js/popper-1.14.7.min.js')
 //-script(defer src='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js' integrity='sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM' crossorigin='anonymous')
-script(async src='/js/bootstrap-4.3.1.min.js')
-script(async src='/js/history-4.10.1.js')
-script(async src='/js/reconnecting-websocket.js')
-script(async data-server_start=server_started src='/js/z.js?v=' + server_started)
+script(defer src='/js/bootstrap-4.3.1.min.js')
+script(defer src='/js/history-4.10.1.js')
+script(defer src='/js/reconnecting-websocket.js')
+script(defer data-server_start=server_started src='/js/z.js?v=' + server_started)
