--- a/www/views/kill-list.pug
+++ b/www/views/kill-list.pug
@@ -1,6 +1,6 @@
 div#killlist
 	each val in json
-		- var url = '/site/killmail/row/' + val.killmail_id + '.html';
+		- var url = '/cache/1hour/killmail/row/' + val.killmail_id + '.html';
 		- var divid = 'kill-' + val.killmail_id
 		div(fetch=url unfetched="true" id=divid)
 br
