--- a/www/views/index.pug
+++ b/www/views/index.pug
@@ -21,8 +21,8 @@ html
 						div#overview-information.float-left.col-sm-6
 						div#overview-statistics.float-right.col-sm-6
 					div#overview-menu
-					div#overview-killmails.col
-					div#overview-weekly
+					div#overview-killmails.col-lg-5
+					div#overview-weekly.col-sm-6
 				div#details
 					div#details-fitting-wheel
 					div#details-information
