--- a/www/views/index.pug
+++ b/www/views/index.pug
@@ -23,14 +23,7 @@ html
 					div#overview-menu
 					div#overview-killmails.col-lg-5
 					div#overview-weekly.col-sm-6
-				div#details
-					div#details-fitting-wheel
-					div#details-information
-					div#details-cargo
-					div#details-top-stats
-					div#details-involved-top10
-					div#details-involved-therest
-					div#details-comments
+				div#killmail.row
 				div#other
 		div.clearfix.push
 		div#footer
