--- a/www/views/mixins.pug
+++ b/www/views/mixins.pug
@@ -13,26 +13,38 @@ mixin type_id_link(tag, type, id, name, extra)
 	-var name = (name == null || name == undefined || name == '' ? type + ' ' + id : name)
 	if id != undefined
 		#{tag}
-			a(href=url alt=name class='override')= name
+			a.override(href=url alt=name)= name
 			+include_extra(extra)
 	else if extra != ''
 			+include_extra(extra)
 
 mixin include_extra(extra)
 	if extra != ''
-		| &nbsp;
 		if extra == 'nostats'
-				span.label.alert.alert-danger.nostats &nbsp;STATS&nbsp;
+			span.label.alert.alert-danger.nostats &nbsp;STATS&nbsp;
 		else if extra == 'solo'
 			span.label.alert.alert-success &nbsp;SOLO&nbsp;
 		else
 			= extra
 
+mixin add_label(label)
+	if label == 'nostats'
+		span.label.alert.alert-danger.nostats &nbsp;STATS&nbsp;
+	else
+		a.override(href='/label/' + label)
+			if label == 'solo'
+				span.label.alert.alert-success &nbsp;SOLO&nbsp;
+			else
+				span.uppercase.label.alert
+					|&nbsp;
+					= label
+					|&nbsp;
+
 mixin tag_image(tag, url, src, name, size)
 	#{tag}
 		-var onerror = 'this.onerror = null; this.src="https://images.evetech.net/alliances/1/logo?size=' + size + '"';
 		-var imageHolder = 'width: ' + size + 'px; height: ' + size + 'px;'
-		a(href=url class='override')
+		a.override(href=url)
 			img.image(src=src alt=name style=imageHolder onerror=onerror)
 
 mixin type_image(tag, id, name, size)
@@ -64,3 +76,21 @@ mixin char_image(tag, id, name, size)
 		-var image = 'https://images.evetech.net/characters/' + id + '/portrait?size=' + size
 		-var name = (name == null || name == undefined || name == '' ? type + ' ' + id : name)
 		+tag_image(tag, url, image, name, size)
+
+mixin info_row(label, value, classes)
+	if value != undefined
+		- value = '' + value
+		if value.length > 0
+			tr
+				td= label
+				td(class=classes)= value
+
+mixin info_row_a(label, type, id, value, classes)
+	-var href= '/' + type.replace('_id', '') + '/' + id
+	if value != undefined
+		- value = '' + value
+		if value.length > 0
+			tr
+				td= label
+				td(class=classes)
+					a(href=href class='override')= value
