--- a/www/views/index.pug
+++ b/www/views/index.pug
@@ -10,12 +10,14 @@ html
 
 	body
 		div.wrapper.container-fluid
-			nav#toptoptop.navbar.navbar-expand-lg
-				a.navbar-brand.override(href='/') zKillboard
-				ul.navbar-nav.mr-auto
-				form.form-inline.my-2.my-lg-0
-					input.form-control.mr-sm-2(type='search' placeholder='Search' aria-label='Search')
 			div#content
+				nav#toptoptop.navbar.navbar-expand-lg
+					a.navbar-brand.override(href='/') zKillboard
+					ul.navbar-nav.mr-auto
+					form.form-inline.my-2.my-lg-0
+						input.form-control.mr-sm-2(type='search' placeholder='Search' aria-label='Search')
+				h1#page-title &nbsp; 
+				hr
 				div#overview
 					div.row
 						div#overview-information.float-left.col-sm-6
