--- a/www/views/mixins.pug
+++ b/www/views/mixins.pug
@@ -45,7 +45,7 @@ mixin tag_image(tag, url, src, name, size)
 		-var onerror = 'this.onerror = null; this.src="https://images.evetech.net/alliances/1/logo?size=' + size + '"';
 		-var imageHolder = 'width: ' + size + 'px; height: ' + size + 'px;'
 		a.override(href=url)
-			img.image(src=src alt=name style=imageHolder onerror=onerror)
+			img.image(src=src title=name alt=name style=imageHolder onerror=onerror)
 
 mixin type_image(tag, id, name, size)
 	if id != undefined
